<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/medbooks_10dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.tutor93.tugasfrensky.view.EditTextLight
                android:id="@+id/add_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/medbooks_48dp"
                android:background="@drawable/login_border_background"
                android:hint="@string/enter_your_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:nextFocusDown="@+id/boarding_input_lastname"
                android:textSize="@dimen/font_16sp" />


        </android.support.design.widget.TextInputLayout>

        <com.tutor93.tugasfrensky.view.TextViewRegular
            android:layout_width="match_parent"
            android:layout_height="@dimen/medbooks_48dp"
            android:layout_marginTop="@dimen/medbooks_20dp"
            android:text="@string/jabatan" />


        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/add_jabatan"
            android:layout_width="match_parent"
            android:layout_height="@dimen/medbooks_30dp"
            android:layout_weight="0.7" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.tutor93.tugasfrensky.view.TextViewRegular
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/gender" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/add_male"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="Male" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/add_female"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="Female" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.tutor93.tugasfrensky.view.TextViewRegular
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="Bookmark" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/add_bookmark"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8" />


        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.tutor93.tugasfrensky.view.EditTextLight
                android:id="@+id/add_age"
                android:layout_width="match_parent"
                android:layout_height="@dimen/medbooks_48dp"
                android:background="@drawable/login_border_background"
                android:hint="@string/age"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:nextFocusDown="@+id/boarding_input_lastname"
                android:textSize="@dimen/font_16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.tutor93.tugasfrensky.view.EditTextLight
                android:id="@+id/add_joindate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/medbooks_48dp"
                android:background="@drawable/login_border_background"
                android:hint="@string/join_date"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:nextFocusDown="@+id/boarding_input_lastname"
                android:textSize="@dimen/font_16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.tutor93.tugasfrensky.view.EditTextLight
                android:id="@+id/add_note"
                android:layout_width="match_parent"
                android:layout_height="@dimen/medbooks_48dp"
                android:background="@drawable/login_border_background"
                android:hint="@string/note"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:nextFocusDown="@+id/boarding_input_lastname"
                android:textSize="@dimen/font_16sp" />

        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/profile_pict"
            android:layout_width="match_parent"
            android:layout_height="@dimen/medbooks_90dp"
            android:layout_above="@+id/add_picture_product"
            android:layout_gravity="center"
            android:layout_margin="@dimen/medbooks_10dp"
            android:src="@drawable/no_image_available" />

        <com.tutor93.tugasfrensky.view.ButtonRegular
            android:id="@+id/add_picture"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/save_product"
            android:layout_gravity="center|bottom"
            android:layout_marginLeft="@dimen/medbooks_30dp"
            android:layout_marginRight="@dimen/medbooks_30dp"
            android:layout_marginTop="@dimen/medbooks_25dp"
            android:background="@drawable/selector_btn_purple_rounded"
            android:gravity="center"
            android:paddingBottom="@dimen/medbooks_10dp"
            android:paddingTop="@dimen/medbooks_10dp"
            android:text="@string/add_picture_from_camera"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/font_14sp" />

        <com.tutor93.tugasfrensky.view.ButtonRegular
            android:id="@+id/add_fromgallery"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/save_product"
            android:layout_gravity="center|bottom"
            android:layout_marginLeft="@dimen/medbooks_30dp"
            android:layout_marginRight="@dimen/medbooks_30dp"
            android:layout_marginTop="@dimen/medbooks_25dp"
            android:background="@drawable/selector_btn_purple_rounded"
            android:gravity="center"
            android:paddingBottom="@dimen/medbooks_10dp"
            android:paddingTop="@dimen/medbooks_10dp"
            android:text="@string/add_picture_from_gallery"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/font_14sp" />

        <com.tutor93.tugasfrensky.view.ButtonRegular
            android:id="@+id/btn_saveemployee"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center|bottom"
            android:layout_marginLeft="@dimen/medbooks_30dp"
            android:layout_marginRight="@dimen/medbooks_30dp"
            android:layout_marginTop="@dimen/medbooks_25dp"
            android:background="@drawable/selector_btn_green_rounded"
            android:gravity="center"
            android:paddingBottom="@dimen/medbooks_10dp"
            android:paddingTop="@dimen/medbooks_10dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/font_14sp" />


    </LinearLayout>
</ScrollView>